hardware/v2/README.md
# Paintbrush Version 2

This is the second hardware design of the Paintbrush mini keyboard. This is a slightly modified form of version 1 with some improvements to make the board a bit nmore flexible overall.

Please see the following sections for details about this hardware version.

## Features

- *Reversable* PCB
  - Can be made left *OR* right handed
- Pro Micro compatible MCU foot print
- Kalih Choc v1 mechanical switches
  - Soldered directly *OR* using hot swap sockets
- OLED support (optional)
- Slide switch that can be used as a power switch (optional)
- Reset button (optional)

## Bill of Materials

Please note: the provided links are for reference. Most of these products can be found in more than one store.

| Component | Part Information | Quantity | Purchase |
| --------- | ---------------- | -------- | -------- |
| Pro Micro MCU | Any pro micro compatible MCU that supports ZMK or QMK | 1 | N/A |
| Kalih Choc v1 Switches | Kailh low profile Switch 1350 Chocolate Keyboard Switch | 8 | [AliExpress](https://www.aliexpress.com/item/32959996455.html) |
| Kalih Hot Swap Sockets (optional if directly soldering switches) | Kailh hot swap Socket for low profile 1350 Chocolate Switches | 8 | [AliExpress](https://www.aliexpress.com/item/33023283633.html) |
| Optional OLED | Any SSD1306 I2C OLED supported by or ZMK | 1 | N/A |
| Optional Power Switch | C&K PCM12SMTR | 1 | [DigiKey](https://www.digikey.com/en/products/detail/c-k/PCM12SMTR/1640112?s=N4IgTCBcDaIAoGECyBGCBdAvkA) |
| Optional Reset button | Omron Electronics Inc-EMC Div B3U-1000P | 1 | [DigiKey](https://www.digikey.com/en/products/detail/omron-electronics-inc-emc-div/B3U-1000P/1534338) |
| Optional 10k Resistor (required for reset button) | KOA Speer Electronics, Inc. CFS1/4CT52R103G | 1 | [DigiKey](https://www.digikey.com/en/products/detail/CFS1%2f4CT52R103G/2019-CFS1%2f4CT52R103GCT-ND/13538240)


## Rendering

![Version 2 Rendering](small-paintbrush-hotswap.png)
